--- a/seminario/package.json
+++ b/seminario/package.json
@@ -2,6 +2,7 @@
   "dependencies": {
     "csv-parser": "^3.0.0",
     "fs": "^0.0.1-security",
-    "papaparse": "^5.4.1"
+    "papaparse": "^5.4.1",
+    "regression": "^2.0.1"
   }
 }
